2002-12-23    <smulloni@smullbola.smullyan.org>

	* docs/stmlrefer/stmlrefer.tex: fixed LaTeX error.

	* pylibs/PyDO/PyDO2.py: start on a draft of a version of PyDO
	using new-style classes and doing a couple of things that the old
	PyDO doesn't do.  

2002-12-18    <smulloni@smullbola.smullyan.org>

	* pylibs/formlib/views.py (ViewableForm.__init__): another default
	value gotcha.

2002-12-13  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/ecs/xhtml.py (CONTAINER_ELEMENTS): added 'li', which
	inexplicably was missing.

	* pylibs/containers/treenode.py (TreeNode.walk): added walk()
	function.

	* pylibs/formlib (all files): added copyright/license notices.

2002-12-10    <smulloni@smullbola.smullyan.org>

	* pylibs/containers/treenode.py: a simple tree class.

2002-12-05  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/formlib/dispatcher.py: more default value gotchas.

	* pylibs/xmlutils.py (XMLElement.walk): added walk() method to
	XMLElement. 
	(XMLElement.walk): fixed to actually do something.

2002-12-04  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/argextract.py: oops, so was this.

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.extract_args):
	oops, this was broken.

2002-12-04  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/formlib/views.py, pylibs/formlib/form.py: fixed several
	instances of the "default function value gotcha"; some reformatting.

2002-12-04  James Richards  <jrichards@satie.wnyc.org>

	* test/formlib/htdocs/testNestedList.pyinc (form): Added
	NestedListLayout() to ViewableForm construction to test new nested
	list layout support

	* pylibs/formlib/views.py (Layout.handleError): Base class with
	standard semantics for error handling during layout
	(FlowLayout.layoutFields): flow layout for simple flow based form
	layout
	(StackLayout.layoutFields): stack layout for default stack based
	form layout
	(NestedListLayout.layoutFields): nested layout for more complex
	form layouts